# nato-spell

./: .gitignore  .travis.yml  README.md  nato_spell.py  nato_speller  natospell  pyproject.toml
.github/workflows/: ci.yml  release.yml
nato_spell/sounds/: CREDITS.md
sounds/: CREDITS.md  _readme_and_license.txt
tests/: test_nato_speller.py
