[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "nato-spell"
version = "0.1.0"
description = "Spelling engine for the NATO phonetic alphabet"
authors = ["Xavier Francisco <xavier.n.francisco@gmail.com>"]
license = 'MIT'
readme = 'README.md'
keywords = ["NATO", "spelling", "alphabet", "phonetic"]
homepage = "https://github.com/Qu4tro/nato-spell/"
repository = "https://github.com/Qu4tro/nato-spell/"
include = ["sounds/*"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nato_spell = "nato_spell:main"
nato-spell = "nato_spell:main"
