[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nato-spell"
version = "0.3.1"
description = "Spelling engine for the NATO phonetic alphabet"
authors = ["Xavier Francisco <xavier.n.francisco@gmail.com>"]
license = 'MIT'
readme = 'README.md'
keywords = ["NATO", "spelling", "alphabet", "phonetic"]
homepage = "https://github.com/Qu4tro/nato-spell/"
repository = "https://github.com/Qu4tro/nato-spell/"
include = ["nato_spell/sounds/*"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
nato_spell = "nato_spell:main"
nato-spell = "nato_spell:main"
