[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nato-spell"
version = "0.3.2"
description = "Spelling engine for the NATO phonetic alphabet"
readme = "README.md"
license = "MIT"
authors = [{ name = "Xavier Francisco", email = "xavier.n.francisco@gmail.com" }]
keywords = ["NATO", "spelling", "alphabet", "phonetic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Qu4tro/nato-spell"
Repository = "https://github.com/Qu4tro/nato-spell"

[project.scripts]
nato-spell = "nato_spell:main"
nato_spell = "nato_spell:main"

[tool.hatch.build.targets.wheel]
packages = ["nato_spell"]

[tool.hatch.build.targets.sdist]
include = [
    "nato_spell/**",
    "README.md",
    "LICENSE",
]
